# MailTriage

./: .env.example  .gitignore  README.md  config.schema.yml  daily.policy.example.yml  main.py  pyproject.toml
docs/: daily-runner.md  models.md
holidays/: manual_holidays.txt
mailtriage/: cli.py
mailtriage/automation/: __init__.py  daily_runner.py  launchd.py
mailtriage/core/: config.py  db.py  extract.py  notify.py  schema.py  timewindow.py
mailtriage/imap/: fetcher.py
mailtriage/ingest/: ingest.py
mailtriage/render/: daily.py  md_to_html.py  site.py  window.py
mailtriage/watch/: __init__.py  notify_unreplied.py  unreplied.py
scripts/: com.dooley.mailtriage.daily.plist  com.mailtriage.daily.plist  com.mailtriage.watch.hourly.plist  run_daily_mailtriage.sh  run_daily_mailtriage_launchd.sh  run_watch_mailtriage_launchd.sh
