[project]
name = "mailtriage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["holidays>=0.67", "pyyaml>=6.0.3"]

[project.scripts]
mailtriage = "mailtriage.cli:main"
mailtriage-daily = "mailtriage.automation.daily_runner:main"
